Finished EDA.py

--- a/analysis/EDA.ipynb
+++ b/analysis/EDA.ipynb
@@ -2534,11 +2534,109 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<h1> Get insights of the dataset based on the graphs </h1>\n",
+    "# Housing Data Analysis: Visualization Insights\n",
+    "\n",
+    "## 1. Pair Plot Analysis\n",
+    "\n",
+    "### 1.1 Distribution Plots (Diagonals)\n",
+    "\n",
+    "* **SalePrice:** \n",
+    "    * Right-skewed distribution\n",
+    "    * More lower-priced homes with high-value outliers\n",
+    "    * Indicates potential need for log transformation in modeling\n",
+    "\n",
+    "* **Gr Liv Area:**\n",
+    "    * Roughly normal distribution with slight right skew\n",
+    "    * More balanced distribution of living areas in dataset\n",
+    "\n",
+    "* **Overall Qual:**\n",
+    "    * Bell-shaped but discrete distribution\n",
+    "    * Centered around quality ratings 5-7\n",
+    "    * Shows clear quality assessment bands\n",
+    "\n",
+    "* **Total Bsmt SF:**\n",
+    "    * Right-skewed distribution\n",
+    "    * Similar pattern to living area\n",
+    "    * Suggests correlation between basement size and total living area\n",
+    "\n",
+    "* **Year Built:**\n",
+    "    * Multi-modal distribution\n",
+    "    * Notable peaks around 1920s and 1970s-2000s\n",
+    "    * Reflects different construction eras in the area\n",
+    "\n",
+    "### 1.2 Scatter Plot Patterns\n",
+    "\n",
+    "* **SalePrice vs Gr Liv Area:**\n",
+    "    * Strong positive correlation\n",
+    "    * Fan-shaped spread indicating heteroscedasticity\n",
+    "    * Price variance increases with home size\n",
+    "\n",
+    "* **SalePrice vs Year Built:**\n",
+    "    * Clear upward trend\n",
+    "    * Higher variance in newer homes\n",
+    "    * Modern homes command premium prices\n",
+    "\n",
+    "* **Overall Qual vs SalePrice:**\n",
+    "    * Clear step-like pattern\n",
+    "    * Discrete quality levels visible\n",
+    "    * Strong price differentiation by quality\n",
+    "\n",
+    "* **Total Bsmt SF vs Gr Liv Area:**\n",
+    "    * Positive correlation but more scattered\n",
+    "    * Suggests varied basement configurations\n",
+    "\n",
+    "* **Year Built vs Overall Qual:**\n",
+    "    * Newer homes tend to have higher quality ratings\n",
+    "    * Progressive improvement in construction standards\n",
+    "\n",
+    "## 2. Correlation Heatmap Analysis\n",
+    "\n",
+    "### 2.1 Strong Correlations (> 0.7)\n",
+    "\n",
+    "* **SalePrice & Overall Qual (0.80):**\n",
+    "    * Strongest correlation in dataset\n",
+    "    * Quality is primary price driver\n",
+    "\n",
+    "* **SalePrice & Gr Liv Area (0.71):**\n",
+    "    * Second strongest correlation\n",
+    "    * Size significantly impacts price\n",
+    "\n",
+    "### 2.2 Moderate Correlations (0.4-0.7)\n",
+    "\n",
+    "* **SalePrice & Total Bsmt SF (0.63)**\n",
+    "* **SalePrice & Year Built (0.56)**\n",
+    "* **Overall Qual & Year Built (0.60)**\n",
+    "* **Gr Liv Area & Overall Qual (0.57)**\n",
+    "\n",
+    "### 2.3 Weaker Correlations (< 0.4)\n",
+    "\n",
+    "* **Gr Liv Area & Year Built (0.24):**\n",
+    "    * Surprisingly weak correlation\n",
+    "    * Home size not strongly tied to age\n",
+    "\n",
+    "* **Year Built & Total Bsmt SF (0.41):**\n",
+    "    * Moderate correlation\n",
+    "    * Newer homes don't necessarily have larger basements\n",
+    "\n",
+    "### 2.4 Color Pattern Analysis\n",
+    "\n",
+    "* Red diagonal showing perfect self-correlations (1.00)\n",
+    "* Blues indicating weaker correlations\n",
+    "* Salmon/pink shades showing moderate to strong positive correlations\n",
+    "* No negative correlations visible in dataset\n",
+    "\n",
+    "## 3. Key Takeaways for Modeling\n",
+    "\n",
+    "1. Consider log transformation for SalePrice due to skewness\n",
+    "2. Overall Quality and Gross Living Area are key predictors\n",
+    "3. Watch for multicollinearity between related features\n",
+    "4. Consider interaction terms between Quality and Year Built\n",
+    "5. May need to address heteroscedasticity in model specification"
+   ]
   }
  ],
  "metadata": {
